Update class/id selectors, fix search bar overflow at smaller widths

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ fieldset {
 	padding: 0;
 }
 
-.search-bar {
+.search {
 	margin-bottom: 2em;
 	display: flex;
 	height: 3em;
@@ -89,7 +89,7 @@ fieldset {
 	box-shadow: -2px 5px 15px -5px hsla(0, 100%, 10%, 0.2);
 }
 
-.search-bar:focus-within {
+.search:focus-within {
 	box-shadow: -1px 2px 10px 5px hsla(
 		var(--primary-H),
 		var(--primary-S),
@@ -98,11 +98,12 @@ fieldset {
 	);
 }
 
-.search-bar > * {
+.search > * {
 	border: none;
 }
 
-.search-bar input {
+#search-bar {
+	width: 100%;
 	padding: .5em 0 .5em .75em;
 	flex-grow: 1;
 	font-family: 'Montserrat', sans-serif;
@@ -136,16 +137,16 @@ fieldset {
 }
 
 .reset,
-.radio {
+.checkbox {
 	padding: .75em;
 	position: relative;
 }
 
-.radio:hover {
+.checkbox:hover {
 	color: var(--primary);
 }
 
-.radio input {
+.checkbox input {
 	background: pink;
 	opacity: 0;
 	width: 100%;
@@ -158,16 +159,16 @@ fieldset {
 	cursor: pointer;
 }
 
-.search-bar input:focus-visible {
+#search-bar:focus-visible {
 	outline: none;
 }
 
-.radio label {
+.checkbox label {
 	display: block;
 }
 
-/* Unselected */
-.radio label:after {
+/* Unchecked */
+.checkbox label:after {
 	content: '';
 	width: 8px;
 	height: 8px;
@@ -180,8 +181,8 @@ fieldset {
 	transition: all .07s ease-in-out;
 }
 
-/* Selected */
-.radio input:checked + label:after {
+/* Checked */
+.checkbox input:checked + label:after {
 	border-radius: 0;
 	width: 20px;
 	height: 10px;
@@ -198,6 +199,8 @@ fieldset {
 	color: var(--dark-grey);
 	background: var(--background);
 	border: none;
+	display: block;
+	margin: 0 auto;
 }
 
 .reset button:hover {
@@ -242,4 +245,3 @@ fieldset {
 #movie-list a {
 	display: block;
 }
-
